--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
     <div class="topbar-right">
       <a class="top-nav-item active" href="index.html">🏠 Home</a>
-      <a class="top-nav-item" href="saved/index.html">💾 Saved Entries</a>
+      <a class="top-nav-item" href="saved_entries.index.html">💾 Saved Entries</a>
     </div>
   </header>
 
