--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     <div class="drawer-nav-links">
         <a href="index.html">🏠 Home</a>
-        <a href="saved/index.html">💾 Saved Entries</a>
+        <a href="saved_entries.html">💾 Saved Entries</a>
     </div>
 
   </nav>
