--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
     <div class="drawer-nav-links">
         <a href="index.html">🏠 Home</a>
         <a href="saved_entries.html">💾 Saved Entries</a>
+        <a href="about.html">💻 About</a>
+        <a href="contact.html">📞 Contact</a>
     </div>
 
   </nav>
