--- a/about.html
+++ b/about.html
@@ -1,21 +1,71 @@
-<section style="font-family: Inter, sans-serif; padding: 24px; max-width: 700px; margin: auto; line-height: 1.7;">
-  <h2 style="font-size: 28px; font-weight: 800; margin-bottom: 12px; color: #1e293b;">
-    About Business Solution
-  </h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Business Solution</title>
 
-  <p style="font-size: 16px; color: #475569; margin-bottom: 16px;">
-    <strong>Business Solution</strong> is a modern and streamlined daily-record system designed to help small and medium businesses track sales, profits, and product performance with ease. The system provides a clean layout, fast navigation, and an intuitive entry process that supports accurate and consistent daily reporting.
-  </p>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background: #f8f8f9;
+            font-size: 20px;          /* Larger text */
+            line-height: 1.7;         /* Better readability */
+            color: #222;
+        }
 
-  <p style="font-size: 16px; color: #475569; margin-bottom: 16px;">
-    All information submitted through the application — including product details, sales figures, pricing, and profit calculations — is securely stored in a dedicated database. This ensures that your records remain organized, easily accessible, and available for future reference whenever needed.
-  </p>
+        h1 {
+            font-size: 32px;          /* Bigger heading */
+            font-weight: bold;
+            color: #111;
+        }
 
-  <p style="font-size: 16px; color: #475569; margin-bottom: 16px;">
-    The system is built with efficiency and reliability in mind, helping you focus on business growth while keeping your data safe, accurate, and well-structured.
-  </p>
+        p {
+            margin-bottom: 18px;
+        }
 
-  <p style="font-size: 17px; font-weight: 700; color: #1e40af; margin-top: 22px;">
-    Project Creator: Max
-  </p>
-</section>
+        a {
+            font-size: 20px;
+            text-decoration: none;
+            color: #0066cc;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>About Business Solution</h1>
+
+    <p>
+        <strong>Business Solution</strong> is a modern and streamlined daily-record system 
+        designed to help small and medium businesses track sales, profits, and product 
+        performance with ease. The system provides a clean layout, fast navigation, and an 
+        intuitive entry process that supports accurate and consistent daily reporting.
+    </p>
+
+    <p>
+        All information submitted through the application — including product details, 
+        sales figures, pricing, and profit calculations — is securely stored in a dedicated 
+        database. This ensures that your records remain organized, easily accessible, and 
+        available for future reference whenever needed.
+    </p>
+
+    <p>
+        The system is built with efficiency and reliability in mind, helping you focus on 
+        business growth while keeping your data safe, accurate, and well-structured.
+    </p>
+
+    <p><strong>Project Creator:</strong> Max</p>
+
+    <br>
+
+    <!-- Link back to main project -->
+    <a href="index.html">← Back to Home</a>
+
+</body>
+</html>
