--- a/contact.html
+++ b/contact.html
@@ -14,25 +14,27 @@
             color: #222;
         }
 
+        /* Full-page container */
         .container {
-            max-width: 700px;
-            margin: 40px auto;
+            width: 100%;
+            min-height: 100vh;
             background: #fff;
-            padding: 30px 35px;
-            border-radius: 14px;
-            box-shadow: 0px 5px 20px rgba(0,0,0,0.08);
+            padding: 30px;
+            box-sizing: border-box;
         }
 
         h1 {
-            text-align: center;
-            font-size: 32px;
+            text-align: left;
+            font-size: 34px;
             margin-bottom: 10px;
+            color: #0066cc;            /* BLUE TITLE LIKE ABOUT PAGE */
+            font-weight: bold;
         }
 
         .info {
-            font-size: 20px;
+            font-size: 22px;
             margin-bottom: 25px;
-            line-height: 1.6;
+            line-height: 1.7;
         }
 
         .contact-box {
@@ -42,18 +44,20 @@
         .contact-item {
             display: flex;
             align-items: center;
-            margin-bottom: 18px;
-            font-size: 20px;
+            margin-bottom: 20px;
+            font-size: 22px;
         }
 
         .contact-item img {
-            width: 32px;
-            height: 32px;
+            width: 34px;
+            height: 34px;
             margin-right: 12px;
         }
 
-        .social-links {
-            margin-top: 30px;
+        h2 {
+            font-size: 28px;
+            margin-top: 40px;
+            margin-bottom: 18px;
         }
 
         .social-links a {
@@ -62,41 +66,39 @@
         }
 
         .social-links img {
-            width: 38px;
-            height: 38px;
-            transition: 0.2s ease;
+            width: 42px;
+            height: 42px;
+            transition: 0.2s;
         }
 
         .social-links img:hover {
-            transform: scale(1.12);
-        }
-
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+            transform: scale(1.15);
         }
 
         .back {
             display: block;
-            margin-top: 40px;
-            text-align: center;
-            font-size: 20px;
+            margin-top: 50px;
+            text-align: left;
+            font-size: 22px;
             font-weight: bold;
+            color: #0066cc;
+            text-decoration: none;
+        }
+
+        .back:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
+
         <h1>Contact Max</h1>
 
         <p class="info">
             If you’d like to get in touch, feel free to use any of the contact methods below.
-            I’m always available for collaboration, support, or project discussions.
+            I’m available for collaboration, support, or project discussions.
         </p>
 
         <div class="contact-box">
@@ -123,7 +125,7 @@
 
         </div>
 
-        <h2 style="font-size:26px; margin-top:40px;">Social Media</h2>
+        <h2>Social Media</h2>
 
         <div class="social-links">
             <a href="#">
