--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             background: #f8f8f9;
-            font-size: 20px;          /* Larger text */
-            line-height: 1.7;         /* Better readability */
+            font-size: 20px;
+            line-height: 1.7;
             color: #222;
         }
 
         h1 {
-            font-size: 32px;          /* Bigger heading */
+            font-size: 32px;
             font-weight: bold;
-            color: #111;
+            color: #0066cc;   /* Title now BLUE */
         }
 
         p {
@@ -56,15 +56,20 @@
     </p>
 
     <p>
+        The system automatically calculates <strong>profit and loss</strong> for each product 
+        using the values you enter, helping you understand your business performance instantly 
+        without doing any manual math.
+    </p>
+
+    <p>
         The system is built with efficiency and reliability in mind, helping you focus on 
         business growth while keeping your data safe, accurate, and well-structured.
     </p>
 
-    <p><strong>Project Creator:</strong> Max</p>
+
 
     <br>
 
-    <!-- Link back to main project -->
     <a href="index.html">← Back to Home</a>
 
 </body>
